# SIR-LLM-is-LLVM

./: .gitignore  GUIDE.md  MCP_SETUP.md  README.md  TEST_REPORT.md  pyproject.toml
paper/: sir_paper.tex
sir/: __init__.py
sir/adapter/: base.py  generic.py  registry.py  schema.py
sir/cli/: main.py
sir/generator/: base.py  config_gen.py  python_gen.py  schema.py
sir/intent/: parser.py  schema.py
sir/ir/: graph.py  schema.py  validator.py
sir/llm/: provider.py
sir/mcp/: __main__.py  install.py  server.py
sir/patch/: builder.py  engine.py  schema.py
sir/pipeline/: compile.py
sir/store/: file_store.py
tests/: test_adapter.py  test_cli.py  test_e2e.py  test_generator.py  test_ir_graph.py  test_ir_schema.py  test_ir_validator.py  test_llm_provider.py  test_mcp_server.py  test_patch.py  test_store.py
