[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "software-intent-runtime"
version = "0.1.0"
description = "Software Intent Runtime - LLM-powered compiler from human intent to software artifacts"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "click>=8.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["sir"]

[project.scripts]
sir = "sir.cli.main:cli"
